--- a/src/scripts/gui/gui.fxml
+++ b/src/scripts/gui/gui.fxml
@@ -11,68 +11,70 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="462.0" prefWidth="518.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.gui.GUIController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="610.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.gui.GUIController">
    <children>
-      <ButtonBar layoutY="424.0" prefHeight="38.0" prefWidth="518.0" style="-fx-background-color: darkgray;">
+      <ButtonBar layoutY="386.0" prefHeight="38.0" prefWidth="610.0" style="-fx-background-color: darkgray;">
         <buttons>
-            <Button fx:id="btnAddMonitor" mnemonicParsing="false" onAction="#addMonitorPressed" text="Add Monitor" />
+            <Button fx:id="btnAddMonitor" mnemonicParsing="false" onAction="#addMonitorPressed" text="Save" />
+            <Button fx:id="btnAddMonitor2" mnemonicParsing="false" onAction="#addMonitorPressed" text="Load" />
+            <Button fx:id="btnAddMonitor1" mnemonicParsing="false" onAction="#addMonitorPressed" text="Add Monitor" />
           <Button fx:id="btnStart" mnemonicParsing="false" onAction="#startPressed" prefHeight="25.0" text="Start" />
         </buttons>
          <padding>
             <Insets right="10.0" />
          </padding>
       </ButtonBar>
-      <ListView fx:id="listMonitors" layoutX="332.0" layoutY="92.0" prefHeight="260.0" prefWidth="161.0" />
-      <Text layoutX="30.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Item ID's" />
-      <TextField fx:id="txtInput" layoutX="132.0" layoutY="96.0" prefHeight="25.0" prefWidth="149.0" />
-      <Text layoutX="27.0" layoutY="342.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Discord URL" />
-      <TextField fx:id="txtUrl" layoutX="133.0" layoutY="325.0" />
-      <Text layoutX="30.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inputs">
+      <ListView fx:id="listMonitors" layoutX="364.0" layoutY="59.0" prefHeight="296.0" prefWidth="234.0" />
+      <Text layoutX="30.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Item ID's" />
+      <TextField fx:id="txtInput" layoutX="132.0" layoutY="58.0" prefHeight="25.0" prefWidth="149.0" />
+      <Text layoutX="27.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Discord URL" />
+      <TextField fx:id="txtUrl" layoutX="133.0" layoutY="287.0" />
+      <Text layoutX="30.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inputs">
          <font>
             <Font name="Calibri" size="18.0" />
          </font>
       </Text>
-      <Text layoutX="28.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Outputs">
+      <Text layoutX="28.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Outputs">
          <font>
             <Font name="Calibri" size="18.0" />
          </font>
       </Text>
-      <Text layoutX="30.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Item ID's" />
-      <TextField fx:id="txtOutput" layoutX="132.0" layoutY="163.0" prefHeight="25.0" prefWidth="149.0" />
-      <ComboBox fx:id="cmbType" layoutX="132.0" layoutY="232.0" prefWidth="150.0" />
-      <Text layoutX="29.0" layoutY="217.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notification Settings">
+      <Text layoutX="30.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Item ID's" />
+      <TextField fx:id="txtOutput" layoutX="132.0" layoutY="125.0" prefHeight="25.0" prefWidth="149.0" />
+      <ComboBox fx:id="cmbType" layoutX="132.0" layoutY="194.0" prefWidth="150.0" />
+      <Text layoutX="29.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notification Settings">
          <font>
             <Font name="Calibri" size="18.0" />
          </font>
       </Text>
-      <Text layoutX="28.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Monitor Type" />
-      <Text layoutX="27.0" layoutY="288.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Threshold Amount" />
-      <TextField fx:id="txtThreshold" layoutX="132.0" layoutY="271.0" prefHeight="25.0" prefWidth="149.0" />
-      <Text layoutX="27.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" text="General">
+      <Text layoutX="28.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Monitor Type" />
+      <Text layoutX="27.0" layoutY="250.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Threshold Amount" />
+      <TextField fx:id="txtThreshold" layoutX="132.0" layoutY="233.0" prefHeight="25.0" prefWidth="149.0" />
+      <Text layoutX="27.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="General">
          <font>
             <Font name="Calibri" size="18.0" />
          </font>
       </Text>
-      <ComboBox fx:id="cmbProfile" editable="true" layoutX="132.0" layoutY="360.0" prefWidth="150.0" />
-      <Text layoutX="28.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Profile" />
-      <Text layoutX="191.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SkrrtMonitor">
+      <ComboBox fx:id="cmbProfile" editable="true" layoutX="132.0" layoutY="322.0" prefWidth="150.0" />
+      <Text layoutX="28.0" layoutY="339.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Profile" />
+      <Text layoutX="237.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SkrrtMonitor">
          <font>
             <Font size="24.0" />
          </font>
       </Text>
-      <Hyperlink layoutX="326.0" layoutY="361.0" text="Forum Thread" />
-      <Hyperlink layoutX="420.0" layoutY="361.0" text="Tribot Profile" />
-      <Text layoutX="82.0" layoutY="86.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(Hourly)">
+      <Hyperlink layoutX="439.0" layoutY="355.0" text="Forum Thread" />
+      <Hyperlink layoutX="523.0" layoutY="355.0" text="Tribot Profile" />
+      <Text layoutX="82.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(Hourly)">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
       </Text>
-      <Text layoutX="92.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(Hourly)">
+      <Text layoutX="92.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(Hourly)">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
       </Text>
-      <Text layoutX="26.0" layoutY="409.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Monitor Name" />
-      <TextField fx:id="txtName" layoutX="132.0" layoutY="392.0" />
+      <Text layoutX="26.0" layoutY="371.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Monitor Name" />
+      <TextField fx:id="txtName" layoutX="132.0" layoutY="354.0" />
    </children>
 </AnchorPane>
