--- a/src/scripts/gui/gui.fxml
+++ b/src/scripts/gui/gui.fxml
@@ -31,12 +31,9 @@
          <contextMenu>
             <ContextMenu>
               <items>
+                  <MenuItem mnemonicParsing="false" text="Edit" />
+                  <MenuItem fx:id="mnuDelete" mnemonicParsing="false" text="Duplicate" />
                 <MenuItem mnemonicParsing="false" text="Delete" />
-                  <MenuItem mnemonicParsing="false" text="Unspecified Action" />
-                  <MenuItem mnemonicParsing="false" text="Delete" />
-                  <MenuItem mnemonicParsing="false" text="Delete" />
-                  <MenuItem mnemonicParsing="false" text="Delete" />
-                  <MenuItem mnemonicParsing="false" text="Unspecified Action" />
                   <Menu mnemonicParsing="false" text="Unspecified Menu">
                     <items>
                       <MenuItem mnemonicParsing="false" text="Action 1" />
