--- a/src/scripts/gui/gui.fxml
+++ b/src/scripts/gui/gui.fxml
@@ -17,9 +17,9 @@
    <children>
       <ButtonBar layoutY="386.0" prefHeight="38.0" prefWidth="610.0" style="-fx-background-color: darkgray;">
         <buttons>
-            <Button fx:id="btnAddMonitor" mnemonicParsing="false" onAction="#addMonitorPressed" text="Save" />
-            <Button fx:id="btnAddMonitor2" mnemonicParsing="false" onAction="#addMonitorPressed" text="Load" />
-            <Button fx:id="btnAddMonitor1" mnemonicParsing="false" onAction="#addMonitorPressed" text="Add Monitor" />
+            <Button fx:id="btnSave" mnemonicParsing="false" onAction="#btnSavePressed" text="Save" />
+            <Button fx:id="btnLoad" mnemonicParsing="false" onAction="#btnLoadPressed" text="Load" />
+            <Button fx:id="btnAddMonitor" mnemonicParsing="false" onAction="#addMonitorPressed" text="Add Monitor" />
           <Button fx:id="btnStart" mnemonicParsing="false" onAction="#startPressed" prefHeight="25.0" text="Start" />
         </buttons>
          <padding>
@@ -72,8 +72,8 @@
             <Font size="24.0" />
          </font>
       </Text>
-      <Hyperlink layoutX="439.0" layoutY="355.0" text="Forum Thread" />
-      <Hyperlink layoutX="523.0" layoutY="355.0" text="Tribot Profile" />
+      <Hyperlink layoutX="439.0" layoutY="355.0" onAction="#threadClicked" text="Forum Thread" />
+      <Hyperlink layoutX="523.0" layoutY="355.0" onAction="#profileClicked" text="Tribot Profile" />
       <Text layoutX="82.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(Hourly)">
          <font>
             <Font name="System Italic" size="12.0" />
