--- a/src/scripts/gui/gui.fxml
+++ b/src/scripts/gui/gui.fxml
@@ -30,8 +30,8 @@
          <contextMenu>
             <ContextMenu>
               <items>
-                  <MenuItem fx:id="mnuDelete" mnemonicParsing="false" text="Duplicate" />
-                <MenuItem mnemonicParsing="false" text="Delete" />
+                  <MenuItem fx:id="mnuDuplicate" mnemonicParsing="false" onAction="#duplicateClicked" text="Duplicate" />
+                <MenuItem fx:id="mnuDelete" mnemonicParsing="false" onAction="#deleteClicked" text="Delete" />
               </items>
             </ContextMenu>
          </contextMenu></ListView>
