--- a/src/scripts/gui/gui.fxml
+++ b/src/scripts/gui/gui.fxml
@@ -31,8 +31,9 @@
          <contextMenu>
             <ContextMenu>
               <items>
-                  <MenuItem fx:id="mnuDuplicate" mnemonicParsing="false" onAction="#duplicateClicked" text="Duplicate" />
+                  <MenuItem fx:id="mnuEdit" mnemonicParsing="false" onAction="#editClicked" text="Edit" />
                 <MenuItem fx:id="mnuDelete" mnemonicParsing="false" onAction="#deleteClicked" text="Delete" />
+                  <MenuItem fx:id="mnuDuplicate1" mnemonicParsing="false" onAction="#duplicateClicked" text="Duplicate" />
               </items>
             </ContextMenu>
          </contextMenu></ListView>
