--- a/src/scripts/gui/presets.fxml
+++ b/src/scripts/gui/presets.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="393.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.gui.Presets">
+<AnchorPane prefHeight="393.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.gui.GUIController">
    <children>
       <ListView layoutX="233.0" layoutY="71.0" prefHeight="242.0" prefWidth="162.0" />
       <ListView layoutX="410.0" layoutY="71.0" prefHeight="242.0" prefWidth="162.0" />
