--- a/src/scripts/gui/presets/presets.fxml
+++ b/src/scripts/gui/presets/presets.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
@@ -15,7 +17,14 @@
 <AnchorPane prefHeight="393.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.gui.presets.PresetController">
    <children>
       <ListView fx:id="listQuests" layoutX="233.0" layoutY="71.0" prefHeight="242.0" prefWidth="162.0" />
-      <ListView fx:id="listPresets" layoutX="410.0" layoutY="71.0" prefHeight="242.0" prefWidth="162.0" />
+      <ListView fx:id="listPresets" layoutX="410.0" layoutY="71.0" prefHeight="242.0" prefWidth="162.0">
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem fx:id="menuAddPreset" mnemonicParsing="false" onAction="#addPresetPressed" text="Add Preset" />
+              </items>
+            </ContextMenu>
+         </contextMenu></ListView>
       <Text layoutX="233.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quests" />
       <Text layoutX="410.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available Presets" />
       <Text layoutX="247.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Presets">
