Corrected fxml context menus

--- a/src/scripts/gui/presets/presets.fxml
+++ b/src/scripts/gui/presets/presets.fxml
@@ -117,15 +117,7 @@
       <Button fx:id="btnHiscore" layoutX="12.0" layoutY="357.0" mnemonicParsing="false" onAction="#btnHiscoresPressed" text="Lookup Hiscores" />
       <TextField fx:id="txtUsername" layoutX="131.0" layoutY="357.0" />
       <Button fx:id="btnIngame" layoutX="11.0" layoutY="321.0" mnemonicParsing="false" onAction="#btnIngamePressed" text="Grab Ingame Info" />
-      <ListView fx:id="listEnabledQuests" layoutX="404.0" layoutY="71.0" prefHeight="242.0" prefWidth="162.0">
-         <contextMenu>
-            <ContextMenu>
-               <items>
-                  <MenuItem fx:id="menuAddPreset1" mnemonicParsing="false" onAction="#addPresetPressed" text="Add Preset" />
-               </items>
-            </ContextMenu>
-         </contextMenu>
-      </ListView>
+      <ListView fx:id="listEnabledQuests" layoutX="404.0" layoutY="71.0" prefHeight="242.0" prefWidth="162.0"/>
       <Text layoutX="404.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Completed Quests" />
       <Button fx:id="btnPresets" layoutX="154.0" layoutY="321.0" mnemonicParsing="false" onAction="#btnShowPresetsClicked" text="Show all presets" />
    </children>
