Changed menuAddPreset to Clicked from Pressed

--- a/src/scripts/gui/main/gui.fxml
+++ b/src/scripts/gui/main/gui.fxml
@@ -121,7 +121,7 @@
                            <contextMenu>
                               <ContextMenu>
                                  <items>
-                                    <MenuItem fx:id="menuAddPreset" mnemonicParsing="false" onAction="#addPresetPressed" text="Add Preset" />
+                                    <MenuItem fx:id="menuAddPreset" mnemonicParsing="false" onAction="#addPresetClicked" text="Add Preset" />
                                  </items>
                               </ContextMenu>
                            </contextMenu>
