--- a/src/scripts/gui/main/gui.fxml
+++ b/src/scripts/gui/main/gui.fxml
@@ -221,6 +221,7 @@
                         <ListView fx:id="listEnabledQuests" layoutX="376.0" layoutY="71.0" prefHeight="324.0" prefWidth="162.0" />
                         <Text layoutX="376.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Completed Quests" />
                         <Button fx:id="btnPresets" layoutX="144.0" layoutY="407.0" mnemonicParsing="false" onAction="#btnShowPresetsClicked" text="Show all presets" />
+                        <Button fx:id="btnRefresh" layoutX="547.0" layoutY="407.0" mnemonicParsing="false" onAction="#btnRefreshClicked" text="Refresh" />
                      </children>
                   </AnchorPane>
                </content>
